--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,16 @@
         android:theme="@style/Theme.Hygeia"
         tools:targetApi="31">
         <activity
+            android:name=".AdministratorMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".StandardMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateAccountActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
