--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
     repositories {
         mavenCentral()
