--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -13,40 +13,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hygeia"
-        tools:targetApi="31">
-        <activity
-            android:name=".ActTransactions"
-            android:exported="false" />
-        <activity
-            android:name=".ActNotifications"
-            android:exported="false" />
-        <activity
-            android:name=".ActTopUp"
-            android:exported="false" />
+        tools:targetApi="31" >
+
         <activity
             android:name=".ActRequestMoney"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity
-            android:name=".ActSendMoney"
-            android:exported="false"
-            android:windowSoftInputMode="adjustResize"/>
-        <activity
-            android:name=".ActMain"
-            android:exported="false" />
-        <activity
-            android:name=".ActForgotPassword"
-            android:exported="false"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".ActCreateAccount"
-            android:exported="false" />
+            android:name=".ActSendMoney"
+            android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".ActLogin"
+            android:name=".ActForgotPassword"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".ActTransactions" />
+        <activity android:name=".ActNotifications" />
+        <activity android:name=".ActTopUp" />
+        <activity android:name=".ActMain" />
+        <activity android:name=".ActCreateAccount" />
+        <activity android:name=".ActLogin"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
