--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,12 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
     repositories {
+        google()
         mavenCentral()
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
+    id 'com.android.application' version '8.0.0' apply false
+    id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
