--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -13,12 +13,11 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hygeia"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
             android:name=".ActSendMoney"
             android:windowSoftInputMode="adjustResize" />
-        <activity
-            android:name=".ActChangePassword" />
+        <activity android:name=".ActChangePassword" />
         <activity
             android:name=".ActUserInfo"
             android:windowSoftInputMode="adjustResize" />
@@ -30,7 +29,7 @@
         <activity android:name=".ActCreateAccount" />
         <activity
             android:name=".ActLogin"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
