--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -13,7 +13,13 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hygeia"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".ActPurchase"
+            android:exported="false" />
+        <activity
+            android:name=".ActMachine"
+            android:exported="false" />
         <activity
             android:name=".ActSendMoney"
             android:windowSoftInputMode="adjustResize" />
@@ -29,7 +35,7 @@
         <activity android:name=".ActCreateAccount" />
         <activity
             android:name=".ActLogin"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
