--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,13 @@ buildscript {
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.20'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.0-Beta'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3"
     }
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
