Adding new class for phone number scanner
adding validation on frgmain home each button if theres a connection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
             android:name=".ActQrCodeScanner"
             android:exported="false" />
         <activity
+            android:name=".ActQrCodeScannerPhoneNumber"
+            android:exported="false" />
+        <activity
             android:name=".ActPurchase"
             android:exported="false" />
         <activity
