--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -20,7 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hygeia"
         tools:targetApi="31">
-
+        <activity
+            android:name=".ActVouchers"
+            android:exported="false" />
         <activity
             android:name=".ActHistory"
             android:exported="false" />
@@ -79,7 +82,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
